--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -139,8 +139,6 @@
                                 <!--<TextBox x:Name="txtReasonforVisit" Text="{Binding ReasonForVisit,Mode=TwoWay}" Grid.Row="3" Grid.Column="2" Margin="1,10,19,10" MinHeight="30"/>-->
 
                                 <ComboBox x:Name="CmbReasonforVisit" Text="{Binding ReasonForVisit,Mode=TwoWay}" Grid.Row="3" Grid.Column="2" Margin="1,10,19,10" MinHeight="30"/>
-
-
                                 <Label x:Name="lblPersontobeVisited" Margin="30,11,0,11" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="158" Grid.ColumnSpan="2">Person(s) to be Visited</Label>
 
                                 <!--<TextBox x:Name="txtPersontobeVisited" Text="{Binding PersontobeVisited,Mode=TwoWay}" Grid.Row="4" Grid.Column="2" Margin="1,10,19,10" MinHeight="30"/>-->
@@ -157,14 +155,16 @@
 
                                 <Label x:Name="lblVisitDateTime" Margin="30,11,0,11" Grid.Row="6" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="139" Grid.ColumnSpan="2">Visit Date and Time</Label>
                                 <TextBox x:Name="txtVisitDateTime" Text="{Binding VisitDateTime,Mode=TwoWay}" Grid.Row="6" Grid.Column="2" Margin="1,10,19,10" MinHeight="30"/>
+                                
                                 <Label x:Name="lblVisitDuration" Margin="30,11,0,11" Grid.Row="7" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="101" Grid.ColumnSpan="2">Visit Duration</Label>
                                 <TextBox x:Name="txtVisitDuration" Text="{Binding VisitDuration,Mode=TwoWay}" Grid.Row="7" Grid.Column="2" Margin="1,10,19,10" MinHeight="30"/>
                                 
                                 <Label x:Name="lblDepartmentManager" Margin="30,11,0,11" Grid.Row="8" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="152" Grid.ColumnSpan="2">Department Manager</Label>
-                                <TextBox x:Name="txtDepartmentManager" Text="{Binding DepartmentManager,Mode=TwoWay}" Grid.Row="8" Grid.Column="2" Margin="1,10,19,10" MinHeight="30"/>
+                                <ComboBox x:Name="CmbDepartmentManager" Text="{Binding DepartmentManager,Mode=TwoWay}" Grid.Row="8" Grid.Column="2" Margin="1,10,19,10" MinHeight="30"/>
                                 
                                 <Label x:Name="lblProductionManager" Margin="30,11,0,11" Grid.Row="9" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="270" Grid.ColumnSpan="2">Production Manager / Deputy Manager</Label>
-                                <TextBox x:Name="txtProductionManager" Text="{Binding ProductionManager,Mode=TwoWay}" Grid.Row="9" Grid.Column="2" Margin="1,10,19,10" MinHeight="30"/>
+                                <ComboBox x:Name="ProductionManagerDeputyManager" Text="{Binding ProductionManager,Mode=TwoWay}" Grid.Row="9" Grid.Column="2" Margin="1,10,19,10" MinHeight="30"/>
+                                
                                 <Label x:Name="lblSecurityController" Margin="30,11,0,11" Grid.Row="10" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="133" Grid.ColumnSpan="2">Security Controller</Label>
                                 <TextBox x:Name="txtSecurityController" Text="{Binding SecurityController,Mode=TwoWay}" Grid.Row="10" Grid.Column="2" Margin="1,10,19,10" MinHeight="30"/>
 
